--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
-</head>
+    <link rel="stylesheet" href="index.css" type="text/css">
+</head> 
 <body>
     <app-view></app-view>
     <script type="module" src="index.js"></script>
